--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header{
 }
 
 
-.logo{
+.logo{  
     width:150px;
     margin:10px;
     height:auto;
@@ -58,7 +58,7 @@ header{
 /* Intro section */
 
 .intro{
-    height:100vh;   
+    min-height:700px;
     
 }
 
@@ -147,7 +147,7 @@ form > span{
 
 
 
-.form >p {
+.form > p {
     width:150px;
 }
 
@@ -265,7 +265,7 @@ button:nth-child(2){
 /* Testimonial section */
 .testimonial{
     min-width:100%;
-    height:450px;
+    min-height:450px;
     padding:20px;
 }
 
@@ -309,16 +309,16 @@ button:nth-child(2){
 /* Overview section */
 
 .overview{
-    height:400px;
+    min-height:400px;
     margin: 40px 20px;
     border-bottom: 1px solid #f2f2f2;
 }
 
 
 .brandywine-overview{
-   display:grid;
-   grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 50px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .patricia-image:before{
@@ -379,7 +379,7 @@ button:nth-child(2){
 /* Building Facts Section */
 .building-facts{
     
-    height:400px;
+    min-height:400px;
 }
 
 
